--- a/environment.yml
+++ b/environment.yml
@@ -52,10 +52,13 @@ dependencies:
       - docker-compose==1.26.2
       - dockerpty==0.4.1
       - docopt==0.6.2
+      - efficientnet-pytorch==0.7.1
       - entrypoints==0.4
       - exceptiongroup==1.2.0
       - fastjsonschema==2.19.0
+      - filelock==3.12.2
       - flatbuffers==2.0.7
+      - fsspec==2023.1.0
       - future==0.18.2
       - gast==0.3.3
       - google-auth==1.19.0
@@ -63,6 +66,7 @@ dependencies:
       - google-pasta==0.2.0
       - grpcio==1.30.0
       - h5py==2.10.0
+      - huggingface-hub==0.16.4
       - hyperopt==0.2.7
       - idna==2.10
       - imageio==2.31.2
@@ -145,11 +149,13 @@ dependencies:
       - requests==2.24.0
       - requests-oauthlib==1.3.0
       - rsa==4.6
+      - safetensors==0.4.1
       - scikit-image==0.19.3
       - scikit-learn==0.23.1
       - scikit-optimize==0.9.0
       - scipy==1.4.1
       - seaborn==0.10.1
+      - segmentation-models-pytorch==0.3.3
       - send2trash==1.8.2
       - six==1.15.0
       - sniffio==1.3.0
@@ -165,6 +171,7 @@ dependencies:
       - texttable==1.6.2
       - threadpoolctl==2.1.0
       - tifffile==2021.11.2
+      - timm==0.9.2
       - tinycss2==1.2.1
       - torch==1.13.1
       - torchvision==0.14.1
