--- a/requirements.txt
+++ b/requirements.txt
@@ -1,180 +1,164 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-absl-py=0.9.0=pypi_0
-albumentations=1.3.1=pypi_0
-anyio=3.7.1=pypi_0
-argon2-cffi=23.1.0=pypi_0
-argon2-cffi-bindings=21.2.0=pypi_0
-astunparse=1.6.3=pypi_0
-attrs=19.3.0=pypi_0
-backcall=0.2.0=pypi_0
-bcrypt=3.1.7=pypi_0
-beautifulsoup4=4.12.2=pypi_0
-bleach=6.0.0=pypi_0
-ca-certificates=2023.12.12=h06a4308_0
-cached-property=1.5.1=pypi_0
-cachetools=4.1.1=pypi_0
-certifi=2022.12.7=py37h06a4308_0
-cffi=1.14.0=pypi_0
-chardet=3.0.4=pypi_0
-click=7.1.2=pypi_0
-cloudpickle=2.2.1=pypi_0
-comm=0.1.4=pypi_0
-cryptography=3.2=pypi_0
-cycler=0.10.0=pypi_0
-debugpy=1.7.0=pypi_0
-decorator=5.1.1=pypi_0
-defusedxml=0.7.1=pypi_0
-distro=1.5.0=pypi_0
-docker=4.2.2=pypi_0
-docker-compose=1.26.2=pypi_0
-dockerpty=0.4.1=pypi_0
-docopt=0.6.2=pypi_0
-entrypoints=0.4=pypi_0
-exceptiongroup=1.2.0=pypi_0
-fastjsonschema=2.19.0=pypi_0
-flatbuffers=2.0.7=pypi_0
-future=0.18.2=pypi_0
-gast=0.3.3=pypi_0
-google-auth=1.19.0=pypi_0
-google-auth-oauthlib=0.4.1=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.30.0=pypi_0
-h5py=2.10.0=pypi_0
-hyperopt=0.2.7=pypi_0
-idna=2.10=pypi_0
-imageio=2.31.2=pypi_0
-importlib-metadata=1.7.0=pypi_0
-ipykernel=6.16.2=pypi_0
-ipython=7.34.0=pypi_0
-ipython-genutils=0.2.0=pypi_0
-ipywidgets=8.1.1=pypi_0
-jedi=0.19.1=pypi_0
-jinja2=3.1.2=pypi_0
-joblib=0.16.0=pypi_0
-jsonschema=3.2.0=pypi_0
-jupyter=1.0.0=pypi_0
-jupyter-client=7.4.9=pypi_0
-jupyter-console=6.6.3=pypi_0
-jupyter-core=4.12.0=pypi_0
-jupyter-server=1.24.0=pypi_0
-jupyterlab-pygments=0.2.2=pypi_0
-jupyterlab-widgets=3.0.9=pypi_0
-keras=2.7.0=pypi_0
-keras-preprocessing=1.1.2=pypi_0
-kiwisolver=1.2.0=pypi_0
-ld_impl_linux-64=2.38=h1181459_1
-libclang=16.0.6=pypi_0
-libedit=3.1.20230828=h5eee18b_0
-libffi=3.2.1=hf484d3e_1007
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-markdown=3.2.2=pypi_0
-markupsafe=2.1.3=pypi_0
-matplotlib=3.2.2=pypi_0
-matplotlib-inline=0.1.6=pypi_0
-mistune=3.0.2=pypi_0
-munch=4.0.0=pypi_0
-nbclassic=1.0.0=pypi_0
-nbclient=0.7.4=pypi_0
-nbconvert=7.6.0=pypi_0
-nbformat=5.8.0=pypi_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.5.8=pypi_0
-networkx=2.6.3=pypi_0
-nltk=3.5=pypi_0
-notebook=6.5.6=pypi_0
-notebook-shim=0.2.3=pypi_0
-numpy=1.20.0=pypi_0
-nvidia-cublas-cu11=11.10.3.66=pypi_0
-nvidia-cuda-nvrtc-cu11=11.7.99=pypi_0
-nvidia-cuda-runtime-cu11=11.7.99=pypi_0
-nvidia-cudnn-cu11=8.5.0.96=pypi_0
-oauthlib=3.1.0=pypi_0
-opencv-python-headless=4.8.1.78=pypi_0
-openssl=1.1.1w=h7f8727e_0
-opt-einsum=3.2.1=pypi_0
-packaging=23.2=pypi_0
-pandas=1.0.5=pypi_0
-pandocfilters=1.5.0=pypi_0
-paramiko=2.7.1=pypi_0
-parso=0.8.3=pypi_0
-pexpect=4.9.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=9.5.0=pypi_0
-pip=22.3.1=py37h06a4308_0
-pretrainedmodels=0.7.4=pypi_0
-prometheus-client=0.17.1=pypi_0
-prompt-toolkit=3.0.43=pypi_0
-protobuf=3.12.2=pypi_0
-psutil=5.9.7=pypi_0
-ptyprocess=0.7.0=pypi_0
-py4j=0.10.9.7=pypi_0
-pyaml=23.5.8=pypi_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.20=pypi_0
-pygments=2.17.2=pypi_0
-pynacl=1.4.0=pypi_0
-pyparsing=2.4.7=pypi_0
-pyrsistent=0.16.0=pypi_0
-python=3.7.6=h0371630_2
-python-dateutil=2.8.1=pypi_0
-python-dotenv=0.14.0=pypi_0
-pytz=2020.1=pypi_0
-pywavelets=1.3.0=pypi_0
-pyyaml=5.3.1=pypi_0
-pyzmq=24.0.1=pypi_0
-qtconsole=5.4.4=pypi_0
-qtpy=2.4.1=pypi_0
-qudida=0.0.4=pypi_0
-readline=7.0=h7b6447c_5
-regex=2020.6.8=pypi_0
-requests=2.24.0=pypi_0
-requests-oauthlib=1.3.0=pypi_0
-rsa=4.6=pypi_0
-scikit-image=0.19.3=pypi_0
-scikit-learn=0.23.1=pypi_0
-scikit-optimize=0.9.0=pypi_0
-scipy=1.4.1=pypi_0
-seaborn=0.10.1=pypi_0
-send2trash=1.8.2=pypi_0
-setuptools=65.6.3=py37h06a4308_0
-six=1.15.0=pypi_0
-sniffio=1.3.0=pypi_0
-soupsieve=2.4.1=pypi_0
-sqlite=3.33.0=h62c20be_0
-tensorboard=2.6.0=pypi_0
-tensorboard-data-server=0.6.1=pypi_0
-tensorboard-plugin-wit=1.7.0=pypi_0
-tensorflow=2.7.1=pypi_0
-tensorflow-estimator=2.7.0=pypi_0
-tensorflow-io-gcs-filesystem=0.34.0=pypi_0
-termcolor=1.1.0=pypi_0
-terminado=0.17.1=pypi_0
-texttable=1.6.2=pypi_0
-threadpoolctl=2.1.0=pypi_0
-tifffile=2021.11.2=pypi_0
-tinycss2=1.2.1=pypi_0
-tk=8.6.12=h1ccaba5_0
-torch=1.13.1=pypi_0
-torchvision=0.14.1=pypi_0
-tornado=6.2=pypi_0
-tqdm=4.47.0=pypi_0
-traitlets=5.9.0=pypi_0
-typing-extensions=4.7.1=pypi_0
-urllib3=1.25.9=pypi_0
-wcwidth=0.2.12=pypi_0
-webencodings=0.5.1=pypi_0
-websocket-client=0.57.0=pypi_0
-werkzeug=1.0.1=pypi_0
-wheel=0.38.4=py37h06a4308_0
-widgetsnbextension=4.0.9=pypi_0
-wrapt=1.12.1=pypi_0
-xz=5.4.5=h5eee18b_0
-zipp=3.1.0=pypi_0
-zlib=1.2.13=h5eee18b_0
+absl-py==0.9.0
+albumentations==1.3.1
+anyio==3.7.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+astunparse==1.6.3
+attrs==19.3.0
+backcall==0.2.0
+bcrypt==3.1.7
+beautifulsoup4==4.12.2
+bleach==6.0.0
+cached-property==1.5.1
+cachetools==4.1.1
+certifi @ file:///croot/certifi_1671487769961/work/certifi
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+cloudpickle==2.2.1
+comm==0.1.4
+cryptography==3.2
+cycler==0.10.0
+debugpy==1.7.0
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.5.0
+docker==4.2.2
+docker-compose==1.26.2
+dockerpty==0.4.1
+docopt==0.6.2
+efficientnet-pytorch==0.7.1
+entrypoints==0.4
+exceptiongroup==1.2.0
+fastjsonschema==2.19.0
+filelock==3.12.2
+flatbuffers==2.0.7
+fsspec==2023.1.0
+future==0.18.2
+gast==0.3.3
+google-auth==1.19.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.30.0
+h5py==2.10.0
+huggingface-hub==0.16.4
+hyperopt==0.2.7
+idna==2.10
+imageio==2.31.2
+importlib-metadata==1.7.0
+ipykernel==6.16.2
+ipython==7.34.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==0.16.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-server==1.24.0
+jupyter_client==7.4.9
+jupyter_core==4.12.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+libclang==16.0.6
+Markdown==3.2.2
+MarkupSafe==2.1.3
+matplotlib==3.2.2
+matplotlib-inline==0.1.6
+mistune==3.0.2
+munch==4.0.0
+nbclassic==1.0.0
+nbclient==0.7.4
+nbconvert==7.6.0
+nbformat==5.8.0
+nest-asyncio==1.5.8
+networkx==2.6.3
+nltk==3.5
+notebook==6.5.6
+notebook_shim==0.2.3
+numpy==1.20.0
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+oauthlib==3.1.0
+opencv-python-headless==4.8.1.78
+opt-einsum==3.2.1
+packaging==23.2
+pandas==1.0.5
+pandocfilters==1.5.0
+paramiko==2.7.1
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pretrainedmodels==0.7.4
+prometheus-client==0.17.1
+prompt-toolkit==3.0.43
+protobuf==3.12.2
+psutil==5.9.7
+ptyprocess==0.7.0
+py4j==0.10.9.7
+pyaml==23.5.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.17.2
+PyNaCl==1.4.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+pytz==2020.1
+PyWavelets==1.3.0
+PyYAML==5.3.1
+pyzmq==24.0.1
+qtconsole==5.4.4
+QtPy==2.4.1
+qudida==0.0.4
+regex==2020.6.8
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+safetensors==0.4.1
+scikit-image==0.19.3
+scikit-learn==0.23.1
+scikit-optimize==0.9.0
+scipy==1.4.1
+seaborn==0.10.1
+segmentation-models-pytorch==0.3.3
+Send2Trash==1.8.2
+six==1.15.0
+sniffio==1.3.0
+soupsieve==2.4.1
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.7.1
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==1.1.0
+terminado==0.17.1
+texttable==1.6.2
+threadpoolctl==2.1.0
+tifffile==2021.11.2
+timm==0.9.2
+tinycss2==1.2.1
+torch==1.13.1
+torchvision==0.14.1
+tornado==6.2
+tqdm==4.47.0
+traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==1.25.9
+wcwidth==0.2.12
+webencodings==0.5.1
+websocket-client==0.57.0
+Werkzeug==1.0.1
+widgetsnbextension==4.0.9
+wrapt==1.12.1
+zipp==3.1.0
